# minhash

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  Requirements.txt  cmake_install.cmake
SourceCode/MinHash/MinHash/: stdafx.cpp
data/: incorrect.t  minhash-in.txt  minhash-out.txt
include/: application.h  argmanager.h  arraygenerator.h  arraymanager.h  extensiondetector.h  extensionmanager.h  filemanager.h  osdetector.h  testingcase.h  testingmanager.h  testingresult.h
lib/boost_1_68_0/libs/math/doc/: math.pdf.REMOVED.git-id
lib/minhash/: CMakeLists.txt  extension.cpp  extension.h  minhash.cpp  minhasher.h  sse2.cpp  structural.cpp
lib/minhash/include/: extension.h  minhash.h  sse2.h
lib/minhash/src/: minhash.cpp  sse2.cpp
materials/: knowledge.txt  links.txt  notes.txt  requirements.txt  writing-guide.txt
minhash/: CMakeLists.txt  avx.cpp  avx.h  avx2.cpp  avx2.h  extension.cpp  extension.h  minhash.cpp  minhash.h  minhasher.cpp  minhasher.h  scalar.cpp  scalar.h  sse2.cpp  sse2.h  structural.cpp  structural.h
source/MinHash/: MinHash.sln
source/MinHash/MinHash/: MinHash.vcxproj
src/: Makefile  application.cpp  argmanager.cpp  arraygenerator.cpp  arraymanager.cpp  extensiondetector.cpp  extensiondetector.h  extensionmanager.cpp  filemanager.cpp  filemanager.h  main.cpp  osdetector.cpp  osdetector.h  output  simdpoc.cpp  testingcase.cpp  testingmanager.cpp  testingresult.cpp
src/test/: addition.cpp  addition.h  multiplication.cpp  multiplication.h  rotl.cpp  rotl.h  xor.cpp  xor.h
training/sample/: main.cpp
